
0.58: Nov 25, 2018

   - on inflate error, first return any remaining bytes before returning the error.

   - remove leading "./" even if ac->currentDir[] is not set; change mirrors a
     change in rsync-bpc and has no effect here since BackupPC::XS doesn't set
     ac->currentDir[].

   - bpc_attrib_dirWrite() updates dir->digest with new digest.

0.57: Dec 2, 2017

    - added BackupPC::XS::DirOps::refCountAllInodeMax() and bpc_path_refCountAllInodeMax() to allow
      BackupPC_refCountAll to get the largest inode as the backup tree is traversed.

0.56: Jun 11, 2017

    - change to Makefile.PL to ensure that parallel builds (make -j N) work with BSD make
      (pull request #4 from Alexander Moisseev).

0.55: Jun 4, 2017

    - updated Makefile.PL so ./configure is run before subdirs are built when parallel make (eg: make -j 4) is used

    - generate error message instead of log message if bpc_poolWrite_unmarkPendingDelete() fails

    - added & ~S_IFMT to chmod() mode argument

0.54: May 25, 2017

    - checks the return value of check the return value of bpc_fileZIO_read() in BackupPC::XS::FileZIO::read()

    - fixed memory leak on file open error return in bpc_fileZIO.c, and another more minor leak in bpc_dirOps.c.

    - added default #define ACCESSPERMS 0777 for Solaris

0.53: March 23, 2017

    - updates to bpc_attribCache to sanitize path names and prepending ac->currentDir
      in bpc_attribCache_getDirEntries().

0.52: March 9, 2017

    - updated config.guess and config.sub; fixes problem with aarch64 and ppc64le
      reported by Denis Fateyev.

0.51: March 5, 2017

    - added dynamic:: target to subdir Makefile.PLs to fix build issue on gentoo
      (patch submitted by Slaven Rezic; see https://rt.cpan.org/Ticket/Display.html?id=120495)

0.50: March 3, 2017

    - Reference counting is now per-backup; replaced static delta information with callable interface.
